--- a/results/all/ideology_gender_and_language.Rmd
+++ b/results/all/ideology_gender_and_language.Rmd
@@ -161,13 +161,18 @@ ggplot(norming_means, aes(x=id, y=indi_mean, color=gender)) +
   geom_point() + 
   theme_minimal() + 
   theme(axis.text.x = element_text(angle=45, hjust=1, size=8)) + 
-  labs(x="Ungendered Lexical Item", y="Mean Rating", color = "Gender of Form", title="Mean Gender Rating by Ungendered Form and Gender Seen") + 
+  labs(x="Ungendered Lexical Item", y="Mean Rating", color = "Gender of Form Seen", title="Mean Gender Rating by Ungendered Form and Gender Seen") + 
   scale_color_manual(values = bran_palette) + 
   theme(plot.margin = unit(c(1,1,2,1), "lines")) +
   annotation_custom(text_high,xmin=-1.3,xmax=-1.3,ymin=7,ymax=7) + 
   annotation_custom(text_low,xmin=-1,xmax=-1,ymin=1,ymax=1) + 
   coord_cartesian(clip = "off")
 ```
+
+```{r}
+ggsave("norming_results_all.png", width=7,height=4,path='/Users/branpap/Desktop/gender_processing/talks_and_papers/qp_paper/figures')
+```
+
 
 ## Self-Paced Reading Study
 
@@ -352,14 +357,15 @@ ggplot(data=sprt_whole_means, aes(x=trial_gender,y=MeanRT,fill=trial_congruency)
 
 ```{r}
 sprt_speaker_means_ideology <- sprt_data %>%
-  group_by(gender_link,workerid,trial_gender,trial_congruency,poli_party) %>%
+  group_by(gender_total,workerid,trial_gender,trial_congruency,poli_party) %>%
   summarise(meanrt = mean(resid_rt))
 ```
 
 
 ```{r}
 sprt_speaker_means_ideology %>%
-  ggplot(aes(x=gender_link,y=meanrt,color=trial_gender,linetype=trial_congruency)) + 
+  filter(!is.na(poli_party)) %>%
+  ggplot(aes(x=gender_total,y=meanrt,color=trial_gender,linetype=trial_congruency)) + 
   geom_point() + 
   geom_smooth(method='lm') + 
   scale_color_manual(values = bran_palette, ) + 
@@ -372,14 +378,15 @@ sprt_speaker_means_ideology %>%
 sprt_data %>%
   filter(!is.na(poli_party)) %>%
   filter(trial_congruency == "neutral") %>%
-  group_by(gender_link,workerid,trial_gender,poli_party) %>%
+  group_by(gender_total,workerid,trial_gender,poli_party) %>%
   summarise(meanrt = mean(resid_rt)) %>%
-  ggplot(aes(x=gender_link,y=meanrt,color=trial_gender)) + 
+  ggplot(aes(x=gender_total,y=meanrt,color=trial_gender)) + 
   geom_point() + 
   geom_smooth(method='lm') + 
   scale_color_manual(values = bran_palette, ) + 
   facet_wrap(~poli_party)
 ```
+
 **Reading Time by Item**
 
 ```{r}
@@ -444,6 +451,14 @@ maze_data <- read.csv('maze_data.csv') %>%
   filter(trial_id!= 'example') %>%
   filter(region=='critical')
 ```
+
+```{r}
+maze_data %>%
+  group_by(workerid) %>%
+  summarise(workerid=paste(unique(workerid))) %>%
+  nrow()
+```
+
 
 **Running Exclusion Criteria**
 Now, we want to exclude any participants who failed to answer at least 80% of the attention check questions correctly. We do this by creating a list of all participants who scored less than 80% on these checks, and then cross-referencing this list with all data points, removing any data points whose participants were in the exclusion list. 
@@ -549,11 +564,44 @@ maze_data <- maze_data %>%
 **Visualisations**
 
 ```{r}
-ggplot(maze_data, aes(x=gender_total, y=resid_rt, color=trial_congruency)) + 
+maze_data %>% 
+  filter(trial_congruency == "neutral") %>%
+  ggplot(aes(x=gender_total, y=resid_rt, color=trial_congruency)) + 
   geom_point(alpha=.5) + 
   geom_smooth(method = 'lm', size=1.2) + 
-  theme_minimal()
+  theme_minimal() + 
+  labs(x="Gender Ideology Score", y="Residual Reading Time", color="Trial Congruency") + 
+  scale_color_manual(values=bran_palette) + 
+  theme(legend.position = "none") + 
+  theme(text = element_text(size = 18))  
 ```
+
+```{r}
+ggsave("maze_neutral_all.png", width=7,height=5,path='/Users/branpap/Desktop/gender_processing/talks_and_papers/qp_paper/figures')
+```
+
+```{r}
+maze_data %>%
+  filter(gender_total < 75) %>%
+  ggplot(aes(x=gender_total, y=resid_rt, color=trial_congruency)) + 
+  geom_point(alpha=.5) + 
+  geom_smooth(method = 'lm', size=1.2) + 
+  theme_minimal() + 
+  labs(x="Gender Ideology Score", y="Residual Reading Time", color="Trial Congruency") + 
+  scale_color_manual(values=bran_palette)
+```
+```{r}
+ggsave("maze_all_incremental.png", width=7,height=5,path='/Users/branpap/Desktop/gender_processing/talks_and_papers/qp_paper/figures')
+```
+
+```{r}
+maze_data %>% 
+  filter(trial_congruency == "neutral") %>%
+  ggplot(aes(x=gender_total, y=resid_rt, color=trial_congruency)) + 
+  geom_point(alpha=.5) + 
+  geom_smooth(method = 'lm', size=1.2) 
+```
+
 
 **Reading Time by Congruency & Gender**
 
@@ -573,7 +621,12 @@ maze_data %>%
   geom_jitter(data = maze_speaker_means, aes(y=MeanRT),alpha=.1,color='darkred') + 
   geom_errorbar(aes(ymin=YMin,ymax=YMax), width=.25) + 
   scale_color_manual(values = bran_palette) + 
-  theme_minimal()
+  theme_minimal() + 
+  labs(x="Trial Condition",y="Mean Reading Time (Residual)",color="Trial Gender Seen")
+```
+
+```{r}
+ggsave("maze_all means.png", width=7,height=5,path='/Users/branpap/Desktop/gender_processing/talks_and_papers/qp_paper/figures')
 ```
 
 **Item Means**
@@ -606,7 +659,57 @@ maze_data %>%
   facet_wrap(~morph_type) + 
   theme(axis.text.x = element_text(angle=45, vjust = 0.5))
 ```
+```{r}
+maze_data %>%
+  filter(!is.na(poli_party)) %>%
+  filter(morph_type == 'compound') %>%
+  filter(poli_party != 'Non-Partisan') %>%
+  group_by(poli_party,condition,trial_gender,trial_congruency) %>%
+  summarize(MeanRT = mean(resid_rt), CI.Low = ci.low(resid_rt), CI.High = ci.high(resid_rt)) %>%
+  mutate(YMin = MeanRT - CI.Low, YMax = MeanRT + CI.High) %>%
+  ggplot(aes(x=condition,y=MeanRT,color=trial_gender,shape=trial_congruency)) + 
+  geom_point(size=3) +
+  geom_errorbar(aes(ymin=YMin,ymax=YMax), width=.25) + 
+  facet_wrap(~ poli_party, nrow = 1) +
+  theme(axis.text.x = element_text(angle = 45, vjust = .7, hjust=.7)) + 
+  scale_color_manual(values = bran_palette)
+```
 
+**Reading Time by Congruency and Ideology**
+
+```{r}
+maze_data %>%
+  filter(!is.na(poli_party)) %>%
+  filter(poli_party != "Non-Partisan") %>%
+  filter(trial_congruency == "neutral") %>%
+  group_by(gender_total,workerid,trial_gender,poli_party) %>%
+  summarise(meanrt = mean(resid_rt)) %>%
+  ggplot(aes(x=gender_total,y=meanrt,color=trial_gender)) + 
+  geom_point() + 
+  geom_smooth(method='lm') + 
+  scale_color_manual(values = bran_palette, ) + 
+  facet_wrap(~poli_party) + 
+  labs(x="Gender Ideology Score",y="Mean Residual Reading Time",color="Trial Gender Name") +
+  theme(text=element_text(size=15))
+```
+```{r}
+ggsave("maze_neutral_poli.png", width=7,height=5,path='/Users/branpap/Desktop/gender_processing/talks_and_papers/qp_paper/figures')
+``` 
+
+
+# ```{r}
+# maze_data %>%
+#   filter(!is.na(subject_information.party_alignment)) %>%
+#   filter(poli_party != "Non-Partisan") %>%
+#   filter(trial_congruency == "neutral") %>%
+#   group_by(workerid,trial_gender,subject_information.party_alignment) %>%
+#   summarise(meanrt = mean(resid_rt)) %>%
+#   ggplot(aes(x=subject_information.party_alignment,y=meanrt,color=trial_gender)) + 
+#   geom_bar() + 
+#   scale_color_manual(values = bran_palette, ) + 
+#   labs(x="Gender Ideology Score",y="Mean Residual Reading Time",color="Trial Gender Name") +
+#   theme(text=element_text(size=15))
+# ```
 
 **Model**
 
@@ -643,7 +746,7 @@ prod_data <- read.csv("production_data.csv")
 **Exclusions**
 
 ```{r}
-exclusion <- prod_data %>% filter(name=='attention') %>%
+prod_exclusion <- prod_data %>% filter(name=='attention') %>%
   group_by(workerid) %>%
   summarise(accuracy = mean(correct)) %>%
   mutate(exclude = ifelse(accuracy < 0.80,'Yes','No')) %>%
@@ -651,7 +754,7 @@ exclusion <- prod_data %>% filter(name=='attention') %>%
 ```
 
 ```{r}
-prod_data <- prod_data[!(prod_data$workerid %in% exclusion$workerid),]
+prod_data <- prod_data[!(prod_data$workerid %in% prod_exclusion$workerid),]
 ```
 
 **Additional Information** 
@@ -687,8 +790,17 @@ prod_data %>%
   geom_bar(position="fill") + 
   facet_wrap(~gender) + 
   scale_fill_manual(values = bran_palette) + 
-  labs(x="Participant Political Party", fill="Gender of Response", y="Proportion of Responses", title="Gender of Response by Gender of Stimulus Name")
+  labs(x="Participant Political Party", fill="Gender of Response", y="Proportion of Responses", title="Gender of Response by Gender of Stimulus Name") + 
+  theme(text=element_text(size=15)) + 
+  theme(axis.text.x = element_text(angle=25))
 ```
+
+```{r}
+ggsave("prod_all_poli.png", width=7,height=5,path='/Users/branpap/Desktop/gender_processing/talks_and_papers/qp_paper/figures')
+``` 
+
+
+
 
 ```{r}
 prod_data %>% 
@@ -707,15 +819,54 @@ prod_data %>%
 prod_data %>%
   filter(!is.na(poli_party)) %>%
   mutate(response_neutral = ifelse(response_gender == "neutral",1,0)) %>%
-  filter(gender!="filler" & gender!= "attention" & gender!="") %>%
+  filter(gender!="filler" & gender!= "attention" & gender!="" & morph_type=="compound") %>%
   group_by(gender,gender_total,poli_party) %>%
   summarise(proportion = mean(response_neutral)) %>%
   ggplot(aes(x=gender_total, y=proportion, color=gender)) +
     geom_point() + 
     geom_smooth() + 
     scale_color_manual(values = bran_palette) +
-    facet_wrap(~poli_party)
+    facet_wrap(~poli_party) + 
+    labs(x="Gender Ideology Score", y="Proportion of Gender Neutral Responses",color="Gender of Name Seen") + 
+    theme(text=element_text(size=15))
 ```
+
+```{r}
+ggsave("prod_neutral_poli.png", width=10,height=5,path='/Users/branpap/Desktop/gender_processing/talks_and_papers/qp_paper/figures')
+``` 
+
+```{r}
+prod_data %>%
+  filter(!is.na(poli_party)) %>%
+  mutate(response_neutral = ifelse(response_gender == "neutral",1,0)) %>%
+  filter(gender!="filler" & gender!= "attention" & gender!="") %>%
+  group_by(gender,subject_information.age,poli_party) %>%
+  summarise(proportion = mean(response_neutral)) %>%
+  ggplot(aes(x=subject_information.age, y=proportion, color=gender)) +
+    geom_point() + 
+    geom_smooth() + 
+    scale_color_manual(values = bran_palette) 
+```
+```{r}
+prod_data %>%
+  filter(!is.na(poli_party)) %>%
+  mutate(response_neutral = ifelse(response_gender == "neutral",1,0)) %>%
+  filter(gender!="filler" & gender!= "attention" & gender!="") %>%
+  group_by(gender,workerid,poli_party) %>%
+  summarise(proportion = mean(response_neutral)) %>%
+  ggplot(aes(x=poli_party, y=proportion, fill=poli_party)) +
+    geom_boxplot(varwidth = T) + 
+    scale_fill_manual(values=bran_palette) + 
+    facet_wrap(~gender) + 
+  theme(legend.position = "none") + 
+  labs(x="Participant Political Party", y="Proportion",title="Mean Prop. of Neutral Responses by Stimuli Gender") + 
+  theme(text=element_text(size=16)) + 
+  theme(axis.text.x = element_text(angle=20))
+```
+
+```{r}
+ggsave("prod_neutral_poli_box.png", width=7, height=5,path='/Users/branpap/Desktop/gender_processing/talks_and_papers/qp_paper/figures')
+``` 
 
 **Gender by Gender, no Ideology**
 
@@ -726,7 +877,8 @@ prod_data %>%
   geom_bar(position="fill") + 
   scale_fill_manual(values = bran_palette) + 
   labs(x="Stimulus Gender", fill="Gender of Response", y="Proportion of Responses", title="Gender of Response by Gender of Stimulus Name") +
-  theme_minimal()
+  theme_minimal() + 
+  geom_errorbar(aes(ymin=))
 ```
 
 **Models**
@@ -759,3 +911,32 @@ production_model_one <- lmer(neutrality_binary~cgender_total + poli_party + gend
 ```{r}
 summary(production_model_one)
 ```
+
+
+# Some Prop Tables
+
+```{r}
+(table(prod_data$subject_information.gender))
+```
+
+
+
+```{r}
+prod_gender_table <- prod_data %>%
+  group_by(workerid,subject_information.gender,poli_party) %>%
+  summarise(subject_gender = paste(unique(subject_information.gender)))
+
+table(prod_gender_table$subject_gender,prod_gender_table$poli_party)
+```
+
+```{r}
+prod_data_all <- read.csv("production_data.csv") %>%
+  filter(type=="filler_semantic" | type=="filler_grammatical") %>%
+  group_by(lexeme,type) %>%
+  summarise(lexeme=paste(unique(lexeme)))
+```
+
+```{r}
+table(prod_data_all$type)
+```
+
