--- a/talks_and_papers/qp_paper/qp1.bib
+++ b/talks_and_papers/qp_paper/qp1.bib
@@ -219,8 +219,9 @@
 	booktitle={Linguistic Society of America 2022 Annual Meeting}
 }
 
- @misc{charalambides_2021, 
- 	title={We recently went viral ON TikTok - Here's what we learned}, url={https://blog.prolific.co/we-recently-went-viral-on-tiktok-heres-what-we-learned/}, 
+ @misc{charalambides2021, 
+ 	title={We recently went viral ON TikTok - Here's what we learned}, url={https://blog.prolific.co/we-recently-went-
+ 	viral-on-tiktok-heres-what-we-learned/}, 
  	journal={Prolific}, 
  	publisher={Prolific}, 
  	author={Charalambides, Nick}, 
@@ -235,4 +236,126 @@
 	year={2021},
 	month={July},
 	date={24}
+}
+
+@article{forster2009maze,
+	title={The maze task: Measuring forced incremental sentence processing time},
+	author={Forster, Kenneth I and Guerrera, Christine and Elliot, Lisa},
+	journal={Behavior research methods},
+	volume={41},
+	number={1},
+	pages={163--171},
+	year={2009},
+	publisher={Springer}
+}
+
+@article{boyce2020maze,
+	title={Maze Made Easy: Better and easier measurement of incremental processing difficulty},
+	author={Boyce, Veronica and Futrell, Richard and Levy, Roger P},
+	journal={Journal of Memory and Language},
+	volume={111},
+	pages={104082},
+	year={2020},
+	publisher={Elsevier}
+}
+
+@misc{socialsecurity,
+	title={Popular Names in 1998},
+	url={https://www.ssa.gov/cgi-bin/popularnames.cgi},
+	author={Social Security Administration},
+	year={2021},
+}
+
+@article{hall2020breksit,
+	title={Breksit or Bregzit: When Political Ideology Drives Language Ideology},
+	author={Hall-Lew, Lauren and Trousdale, Graeme},
+	journal={University of Pennsylvania Working Papers in Linguistics},
+	volume={26},
+	number={2},
+	pages={11},
+	year={2020}
+}
+
+@article{hall2010indexing,
+	title={Indexing political persuasion: Variation in the Iraq vowels},
+	author={Hall-Lew, Lauren and Coppock, Elizabeth and Starr, Rebecca L},
+	journal={American Speech},
+	volume={85},
+	number={1},
+	pages={91--102},
+	year={2010},
+	publisher={Duke University Press}
+}
+
+@article{labov1963social,
+	title={The social motivation of a sound change},
+	author={Labov, William},
+	journal={Word},
+	volume={19},
+	number={3},
+	pages={273--309},
+	year={1963},
+	publisher={Taylor \& Francis}
+}
+
+@article{podesva2015country,
+	title={Country ideology and the California vowel shift},
+	author={Podesva, Robert J and D'onofrio, Annette and Van Hofwegen, Janneke and Kim, Seung Kyung},
+	journal={Language Variation and Change},
+	volume={27},
+	number={2},
+	pages={157--186},
+	year={2015},
+	publisher={Cambridge University Press}
+}
+
+@article{duffy2004violating,
+	title={Violating stereotypes: Eye movements and comprehension processes when text conflicts with world knowledge},
+	author={Duffy, Susan A and Keir, Jessica A},
+	journal={Memory \& Cognition},
+	volume={32},
+	number={4},
+	pages={551--559},
+	year={2004},
+	publisher={Springer}
+}
+
+@article{foertsch1997search,
+	title={In search of gender neutrality: Is singular they a cognitively efficient substitute for generic he?},
+	author={Foertsch, Julie and Gernsbacher, Morton Ann},
+	journal={Psychological science},
+	volume={8},
+	number={2},
+	pages={106--111},
+	year={1997},
+	publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{misersky2014norms,
+	title={Norms on the gender perception of role nouns in Czech, English, French, German, Italian, Norwegian, and Slovak},
+	author={Misersky, Julia and Gygax, Pascal M and Canal, Paolo and Gabriel, Ute and Garnham, Alan and Braun, Friederike and Chiarini, Tania and Englund, Kjellrun and Hanulikova, Adriana and {\"O}ttl, Anton and others},
+	journal={Behavior research methods},
+	volume={46},
+	number={3},
+	pages={841--871},
+	year={2014},
+	publisher={Springer}
+}
+
+@chapter{hellinger2001english,
+	title={English--Gender in a global language},
+	author={Hellinger, Marlis},
+	book={Gender across languages: The linguistic representation of women and men},
+	pages={105--113},
+	year={2001},
+	publisher={John Benjamins Amsterdam}
+}
+
+@incollection{kastovsky2011inflectional,
+	title={Inflectional classes, morphological restructuring, and the dissolution of Old English grammatical gender},
+	author={Kastovsky, Dieter},
+	booktitle={Gender in grammar and cognition},
+	pages={709--728},
+	year={2011},
+	publisher={De Gruyter Mouton}
 }
